# weak-chess-engines-for-GUST

./: .gitignore  ADDING_NEW_ENGINE.md  README.md  build.py  main.py  pyproject.toml  requirements.txt  tournament.py
.github/workflows/: build-book.yml  build-release.yml  test.yml
examples/: test_engines.py
scripts/: CCCP_engine.py  alphabetical_engine.py  anti_positional_engine.py  blunder_engine.py  build_opening_book.py  color_square_engine.py  criminal_engine.py  euler_engine.py  generate_tournament_tables.py  greedy_capture_engine.py  huddle_engine.py  lawyer_engine.py  mirror_x_engine.py  mirror_y_engine.py  mover_engine.py  opening_book_engine.py  opposite_color_square_engine.py  paralegal_engine.py  passafist_engine.py  pi_engine.py  random_engine.py  rare_opening_book_engine.py  reverse_alphabetical_engine.py  reverse_start_engine.py  runaway_engine.py  shuffle_engine.py  single_player_engine.py  strangler_engine.py  suicide_king_engine.py  swarm_engine.py
src/: base_engine.py
src/engines/: CCCP_engine.py  __init__.py  alphabetical_engine.py  anti_positional_engine.py  blunder_engine.py  color_square_engine.py  criminal_engine.py  euler_engine.py  greedy_capture_engine.py  huddle_engine.py  lawyer_engine.py  mirror_x_engine.py  mirror_y_engine.py  mover_engine.py  opening_book_engine.py  opposite_color_square_engine.py  paralegal_engine.py  passafist_engine.py  pi_engine.py  random_engine.py  rare_opening_book_engine.py  reverse_alphabetical_engine.py  reverse_start_engine.py  runaway_engine.py  shuffle_engine.py  single_player_engine.py  swarm_engine.py  (+2 more)
